--- a/musicroom.html
+++ b/musicroom.html
@@ -398,7 +398,7 @@
     const defaultCover = "Images/albumcover.jpg";
     const songs = [
       { title: "Beauty and the Beast", author: "Izuku & Pragya", duration: "0:19", cover: "CSS/pfp0.jpg", description: "", audio: "songs/song1.mp3" },
-      { title: "Twisterrr", author: "Izuku & Pragyas", duration: "0:19", cover: "CSS/pfp12.jpg", description: "", audio: "songs/song2.mp3" },
+      { title: "Twisterrr", author: "Izuku,Uski Pragya & Pragya", duration: "0:19", cover: "CSS/pfp12.jpg", description: "", audio: "songs/song2.mp3" },
       { title: "GANG GANG GANG",       author: "Izuku & Pragya", duration: "0:19", cover: "CSS/pfp7.jpg", description: "", audio: "songs/song3.mp3" },
       { title: "Not LOOSING you",   author: "Telegram Chat", duration: "0:19", cover: "CSS/pfp16.jpg", description: "", audio: "songs/song4.mp3" },
       { title: "Last day of the summer",     author: "Izuku & Pragya", duration: "0:19", cover: "CSS/pfp1.jpg", description: "", audio: "songs/song5.mp3" },
@@ -408,7 +408,7 @@
       { title: "Inception",     author: "Izuku & Pragya", duration: "0:19", cover: "CSS/pfp8.jpg", description: "", audio: "songs/song9.mp3" },
       { title: "HORROR HOUSE",     author: "Darawni Pragya", duration: "0:19", cover: "CSS/pfp13.jpg", description: "", audio: "songs/song10.mp3" },
       { title: "Sugar and Spice",     author: "Izuku & Pragya", duration: "0:19", cover: "CSS/pfp6.jpg", description: "", audio: "songs/song11.mp3" },
-      { title: "Sneaky Sneaky",     author: "Izuku & Pragyas", duration: "0:19", cover: "CSS/pfp3.jpg", description: "", audio: "songs/song12.mp3" },
+      { title: "Sneaky Sneaky",     author: "Izuku,Uski Pragya & Pragya", duration: "0:19", cover: "CSS/pfp3.jpg", description: "", audio: "songs/song12.mp3" },
       { title: "MY TREASURE",     author: "Kurti wali Pragya", duration:"0:19", cover: "CSS/pfp10.jpg", description: "", audio: "songs/song13.mp3" },
       { title: "Momos and Rains",     author: "Izuku & Pragya", duration: "0:19", cover: "CSS/pfp14.jpg", description: "", audio: "songs/song14.mp3" },
       { title: "500 days of sleeping beauty",     author: "Tired Pragya", duration: "0:19", cover: "CSS/pfp23.jpg", description: "", audio: "songs/song15.mp3" },
@@ -605,4 +605,5 @@
     renderSidebar();
   </script>
 </body>
+
 </html>          
