--- a/quiz.html
+++ b/quiz.html
@@ -272,13 +272,13 @@ let questions = [
   { type: "mcq", question: "To whom do you send the most reels to?", options: ["Neha", "Utkarsh", "Pragya", "Utkarsh,but extra pyaar se"], answer: "", onCorrect: "", onWrong: "", statement: "" },
   { type: "input", question: "What line of MKPJ do you remember the most?", options: [], answer: "", onCorrect: "", onWrong: "", statement: "" },
   { type: "input", question: "Utkarsh isn’t Utkarsh without______?", options: [], answer: "", onCorrect: "", onWrong: "", statement: "" },
-  { type: "input", question: "Chote papa used to call you _____ when you were chotuuu.", options: [], answer: "", onCorrect: "", onWrong: "", statement: "" },
-  { type: "mcq", question: "Give an approximate estimate of how many calls we had made last year.", options: ["484", "533", "576", "616"], answer: "", onCorrect: "", onWrong: "", statement: "" },
+  { type: "input", question: "Bade papa used to call you _____ when you were chotuuu.", options: [], answer: "", onCorrect: "", onWrong: "", statement: "" },
+  { type: "mcq", question: "Give an approximate estimate of how many calls we had made last year.", options: ["484", "538", "576", "616"], answer: "", onCorrect: "", onWrong: "", statement: "" },
   { type: "statement", question: "This isn’t a question, it’s just a reminder that you are lovely sweetu.", options: [], answer: "", onCorrect: "", onWrong: "", statement: "" },
   { type: "input", question: "How jealous do you get when I am with other people without you?", options: [], answer: "", onCorrect: "", onWrong: "", statement: "" },
   { type: "input", question: "Who is your favourite footballer?", options: [], answer: "", onCorrect: "", onWrong: "", statement: "" },
   { type: "input", question: "If we were to go out on a street food date what will you look forward to the most?", options: [], answer: "", onCorrect: "", onWrong: "", statement: "" },
-  { type: "input", question: "Why did you cry on your 7th birthday?", options: [], answer: "", onCorrect: "", onWrong: "", statement: "" },
+  { type: "input", question: "Why did you cry on your 7th grade birthday?", options: [], answer: "", onCorrect: "", onWrong: "", statement: "" },
   { type: "input", question: "Use 3 words to describe me.", options: [], answer: "", onCorrect: "", onWrong: "", statement: "" },
   { type: "input", question: "How wide do I smile when I am talking to you??", options: [], answer: "", onCorrect: "", onWrong: "", statement: "" },
   { type: "input", question: "What is your worth for me if you are so so so important in my life?", options: [], answer: "", onCorrect: "", onWrong: "", statement: "" },
@@ -653,5 +653,4 @@ iterateQuestions();
 
 </script>
 </body>
-
 </html>                        
