--- a/corridor.html
+++ b/corridor.html
@@ -48,7 +48,7 @@ body {
   <div id="spot1" class="hotspot" style="top: 85px; left: 90px; width: 230px; height: 800px;"></div>
 </a>
 
-<a href="letter.html">
+<a href="security.html">
   <div id="spot2" class="hotspot" style="top: 230px; left: 390px; width: 130px; height: 550px;"></div>
 </a>
 
@@ -67,3 +67,4 @@ body {
 
 </body>
 </html>
+
