--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@ body {
 .hotspot {
   position: absolute;
   cursor: pointer;
-  background: transparent;
+  background: rgb(0,0,0,0.5);
   border: none;
 }
 </style>
@@ -45,7 +45,11 @@ body {
 
   <!-- 🚪 Door Hotspot -->
   <a href="corridor.html" target="_blank" id="doorLink">
-    <div id="door" class="hotspot" style="top: 150px; left: 10px; width: 170px; height: 450px;"></div>
+    <div id="door" class="hotspot" style="top: 15%; left: 1%; width: 11%; height: 43%;"></div>
+  </a>
+
+  <a href="https://sherryuser.github.io/cake-blow/?utm_source=chatgpt.com" target="_blank" id="doorLink">
+    <div id="cake" class="hotspot" style="top: 54%; left: 38%; width: 16%; height: 28%;"></div>
   </a>
 </div>
 
