--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@ body {
 .hotspot {
   position: absolute;
   cursor: pointer;
-  background: rgb(0,0,0,0.5);
+  background: rgb(0,0,0,0);
   border: none;
 }
 </style>
@@ -48,7 +48,7 @@ body {
     <div id="door" class="hotspot" style="top: 15%; left: 1%; width: 11%; height: 43%;"></div>
   </a>
 
-  <a href="https://sherryuser.github.io/cake-blow/?utm_source=chatgpt.com" target="_blank" id="doorLink">
+  <a href="https://sherryuser.github.io/cake-blow/?utm_source=chatgpt.com" target="_blank" id="cakelink">
     <div id="cake" class="hotspot" style="top: 54%; left: 38%; width: 16%; height: 28%;"></div>
   </a>
 </div>
@@ -56,6 +56,7 @@ body {
 <script>
 const music = document.getElementById("bg-music");
 const doorLink = document.getElementById("doorLink");
+  const cakeLink = document.getElementById("cakelink");
 
 // Try to play muted first
 window.addEventListener("load", () => {
@@ -81,7 +82,12 @@ doorLink.addEventListener("click", () => {
   music.pause();
   music.currentTime = 0; // reset to beginning
 });
+  cakeLink.addEventListener("click", () => {
+  music.pause();
+  music.currentTime = 0; // reset to beginning
+});
 </script>
 
 </body>
 </html>
+
